@@ -5,7 +5,7 @@ AC_PREREQ(2.60)
 AC_INIT(gmlive, 0.20b1, xihels@gmail.com)
 AC_COPYRIGHT([Copyright (C) 2007 xihels@gmail.com])
 AC_CONFIG_SRCDIR([src/main.cpp])
-AM_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE(dist-bzip2 no-define)
 
 AM_MAINTAINER_MODE
